# jamjam

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
docs/: conf.py  favicon.xml  hello.rst  index.rst  intro.rst  make.bat
docs/advanced/: stuff.rst
jamjam/: __init__.py  _text.py  _utils.py  c.py  classes.py  decorator.py  eenum.py  funcs.py  idle.py  iter.py  jank.py  py.typed  typing.py  win.py  winapi.py
jamjam/_lib/: classes.py  decorator.py  overloading.py  testing.py  typevars.py  typing.py  win.py
jamjam/_scripts/: dark.py  idle.py  info.py
jamjam/_tests/: conftest.py  test_classes.py  test_clib.py  test_decorator.py  test_funcs.py  test_iter.py  test_typing.py  test_win.py
jamjam/win/: __init__.py  api.py
tests/: conftest.py
tests/demo/: test_defaultdict.py  test_descriptors.py  test_dict.py  test_init.py  test_metaclass.py  test_methods.py  test_tuple.py
tests/jamjam/: test_clib.py  test_clsutils.py  test_eenum.py  test_iter.py  test_jank.py  test_text.py  test_typeutils.py  test_utils.py  test_win.py
