# Python package configuration.
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "jamjam"
version = "0.0.1"
readme = 'README.md'
# from https://choosealicense.com/licenses/gpl-3.0/
license = { file = 'LICENSE' }

requires-python = ">=3.11"
dependencies = ["typing_extensions"]


[project.optional-dependencies]
dev = [
    # tooling:
    "mypy",
    "pre-commit",
    "pylint",
    "pytest",
    # docs:
    "sphinx",
    "furo",
]


[project.scripts]
"jj.info" = "jamjam._scripts.info:main"


[tool.mypy]
# see: https://mypy.readthedocs.io/en/stable/config_file.html
# TODO: This config can definately be simplified. Move stuff into error code lists._scripts
# TODO: Rational should be added for each rule's enabling/disabling.
allow_redefinition = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
extra_checks = true
implicit_reexport = true
show_column_numbers = true
show_error_code_links = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = [
    "ignore-without-code",
    "mutable-override",
    "narrowed-type-not-subtype",
    "possibly-undefined",
    "redundant-cast",
    "redundant-expr",
    "redundant-self",
    "truthy-bool",
    "truthy-iterable",
    "type-arg",
    "unimported-reveal",
    "unused-awaitable",
]
disable_error_code = [
    "comparison-overlap", # perfectly type-safe
]


[tool.ruff]
# see: https://docs.astral.sh/ruff/rules/
target-version = "py311"
output-format = "concise"
line-length = 61
format.preview = true
format.docstring-code-format = true
format.skip-magic-trailing-comma = true

lint.select = ["ALL"]
lint.ignore = [
    "ANN401",  # any-type
    "COM812",  # missing-trailing-comma
    "D105",    # undocumented-magic-method
    "D203",    # one-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "D300",    # triple-single-quotes
    "D400",    # missing-trailing-period
    "D415",    # missing-terminal-punctuation
    "FIX002",  # line-contains-todo
    "ISC001",  # single-line-implicit-string-concatenation
    "PLC0105", # type-name-incorrect-variance
    "PLR2004", # magic-value-comparison
    "PT013",   # pytest-incorrect-pytest-import
    "S101",    # assert
    "T201",    # print
    "TC001",   # typing-only-first-party-import
    "TC002",   # typing-only-third-party-import
    "TC003",   # typing-only-standard-library-import
    "TC003",   # typing-only-standard-library-import
    "TC006",   # runtime-cast-value
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-link
    # docs are on the TODO list:
    "D102",
    "D107",
]
lint.extend-per-file-ignores."docs/conf.py" = [
    "A001",   # builtin-variable-shadowing
    "INP001", # implicit-namespace-package;
]
lint.isort.split-on-trailing-comma = false
lint.isort.extra-standard-library = ["typing_extensions"]


[tool.pylint.main]
# https://pylint.pycqa.org/en/latest/user_guide/messages/messages_overview.html
enable = ["all"]
disable = [
    "fixme",                      # currently use TODO's to track issues
    "missing-class-docstring",    # TODO: may enable docstring checks later
    "missing-function-docstring", # TODO: may enable docstring checks later
    "missing-kwoa",               # conflicts with type-checkers
    "missing-module-docstring",   # TODO: may enable docstring checks later
    "protected-access",           # covered by `ruff`
    "redefined-builtin",          # often ok
    "too-few-public-methods",     # small classes are fine
    "too-many-function-args",     # conflicts with type-checkers
    "unbalanced-tuple-unpacking", # has been wrong & covered by type-checkers
    "wrong-import-order",         # covered by `ruff`
    # TODO: configure & enable:
    "typevar-name-incorrect-variance",
    "invalid-name",
]
